--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,26 @@
 
     <string name="api_airweb_base_url">https://airweb-demo.airweb.fr/</string>
 
+
+    <string name="notice_app_offline">Vous êtes actuellement hors-ligne</string>
+
+    <string name="news_type_default">News</string>
+    <string name="news_type_actuality">Actualités</string>
+    <string name="news_type_hot">Hot</string>
+
+    <string name="search_result">%d résultats</string>
+
     <!-- Strings retrieve in NewsDetailsViewModel -->
     <string name="contact_company_name">Airweb - Facilitateur de mobilité</string>
     <string name="contact_address">: 1 Rue Royale, Bureaux de Colline, 92210 Saint Cloud (lancer le
 GoogleMap et faire l\'itération en cliquant sur l\’adresse)</string>
     <string name="contact_email">contact@airweb.fr</string>
     <string name="contact_phone_number">+33 1 76 61 65 10</string>
+
+
+    <string name="bottom_nav_home">À la une</string>
+    <string name="bottom_nav_settings">Configuration</string>
+
     <!-- TODO: Remove or change     this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
